--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "expo": "~42.0.1",
+    "expo-constants": "~11.0.1",
+    "expo-linear-gradient": "~9.2.0",
+    "expo-location": "~12.1.2",
+    "expo-network": "~3.2.0",
+    "expo-permissions": "~12.1.1",
     "expo-status-bar": "~1.0.4",
+    "lottie-react-native": "4.0.2",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-maps": "^0.29.3",
+    "react-native-simple-toast": "^1.1.3",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-native-wifi-reborn": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
